Task 1.2 - Kubernetes/ns-test.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test
  labels:
    name: test
