Task 1.2 - Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: my-ingress
 namespace: test
 annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: my-deployment.info
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: app-entrypoint
               port:
                 number: 8000
